# meta-stripper

./: .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  ROADMAP.md  SECURITY.md  WHY_METADATA_MATTERS.md  fix_linting.py  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
src/metastripper/: __init__.py  __main__.py  cli.py  core.py
src/metastripper/handlers/: __init__.py  base.py  docx.py  jpeg.py  pdf.py  png.py  pptx.py  webp.py  xlsx.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_handlers.py  test_image_handlers.py  test_pdf_handler.py  test_selective.py
